@@ -1,3 +1,7 @@
+2006-02-12    <tino@firebird.03.softkill.net>
+
+	* html_entities.h: added
+
 2006-02-11    <tino@firebird.03.softkill.net>
 
 	* debug.h, dirty.h, getopt.h, sock.h: "TINO_XXX;" instead of
